--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/cart/main.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/cart/main.html
@@ -44,7 +44,7 @@
 	<div id="cartQtyChangeDiv"></div>
 </form>
 
-<form id="FORM_product" method="post" action="[[${BASE_PATH}]]/merchandize/product/main">	
+<form id="FORM_product" method="post" th:action="|${BASE_PATH}/merchandize/product/main|">	
 </form>
 
 <form id="FORM_delete" method="post">
