--- a/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/main/main_fileupload.html
+++ b/src/main/resources/templates/portal/iv/eu/parts/domestic/merchandize/main/main_fileupload.html
@@ -20,8 +20,8 @@
 	<input type="hidden" id="IPT_fuiId" name="fuiId"  th:value="${fileValidStr}">					
 	<div id="DIV_fileinfoArea" style="border:none; float:left; width:100%;height:68px;">
 		<div id="DIV_addFileArea" style="">
-			<article th:replace="~{/portal/corp/eu/common/bbs/attach_file :: attachFile()}"></article>
-			<article th:replace="~{/portal/corp/eu/common/bbs/attach_file :: attachFileScript('1', '10485760')}"></article>	
+			<!-- <article th:replace="~{/portal/corp/eu/common/bbs/attach_file :: attachFile()}"></article>
+			<article th:replace="~{/portal/corp/eu/common/bbs/attach_file :: attachFileScript('1', '10485760')}"></article> -->	
 		</div>
 	</div>
 <!-- 상위 영역 좌우 분할 : 우측 div End -->						
@@ -33,7 +33,7 @@
 
 $(document).ready(function() 
 {
-
+	ProgressBar.hide();
 });
 
 // 파일 저장 
