--- a/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
+++ b/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
@@ -454,8 +454,8 @@ a.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 .right {text-align: right;}
 .summary {background-color: #dcf2ec; font-weight: bold;}
 
-/*td.link {text-decoration: underline; color: #4183C4; cursor: pointer;}*/
-td.link {text-decoration: underline; color:#4183C4; cursor: pointer;}
+/*td.link {text-decoration: underline; color:#4183C4; cursor: pointer;}*/
+td.link {color:#4183C4; cursor: pointer;}
 td.link:hover {text-decoration: underline; color: #00a779; cursor: pointer;}
 
 .empty-message-area {
