--- a/src/main/resources/templates/portal/iv/board/write.html
+++ b/src/main/resources/templates/portal/iv/board/write.html
@@ -34,7 +34,6 @@
 				<th>[[#{HQP_L_CONTENT}]]<img src="/portal/img/icon/required.png" class="required" /></th>
 				<td><div id="xfe"></div></td>
 			</tr>
-			
 			<tr th:style="${(board?.fgSetTarget == T(org.jwebppy.portal.iv.common.IvCommonVo).YES) ? '' : 'display:none;'}">
 				<th th:text="#{HQP_L_VISIBLE_TARGET}"/>
 				<td>
@@ -113,7 +112,8 @@
 					<div class="split-row-more-compact"></div>
 					<div style="display: block; height: 1px; background-color: #cccccc; margin-top:2px; margin-bottom:2px;"></div>
 					<div class="split-row-more-compact"></div>
-					<div id="attachedFiles" style="width:100%; height:5em; display: block; overflow-y: auto;">
+					<!-- div id="attachedFiles" style="width:100%; height:5em; overflow-y: auto;" -->
+					<div id="attachedFiles">
 						<div th:each="uploadFileList : ${boardContent?.uploadFileLists}">
 							<input name="uflSeq" type="checkbox" th:value="${uploadFileList.uflSeq}" class="custom-ui" th:fileName="${uploadFileList.fullOriginName}"/><label th:text="${uploadFileList.fullOriginName}"></label>
 							<div class="split2"></div><span th:text="${uploadFileList.displayFileSize}"></span>
@@ -338,24 +338,20 @@ $("#files").on("change", function() {
 
 $("#BTN_deleteFile").on("click", function(event) {
 	let files = Array.from($("#files")[0].files);
+	const dataTransfer = new DataTransfer();
 	
 	$.each($("#FORM_write input[name=uflSeq]"), function(i, item) {
 		if ($(this).is(":checked"))
 		{
-			let fileName = $(this).attr("fileName");
-			
 			for (let j=0, length=files.length; j<length; j++)
 			{
-				if (files[j] == null)
+				if (JpUtilsString.equals(files[j].name, $(this).attr("fileName")))
 				{
-					continue;
-				}
-				
-				if (JpUtilsString.equals(files[j].name, fileName))
-				{
-					files.splice(j, 1, null);
+					files.splice(j, 1);
 				};
-			};		
+			};
+			
+			files.forEach(file => { dataTransfer.items.add(file); });
 			
 			if (JpUtilsString.isNotEmpty($(this).val()))
 			{
@@ -363,6 +359,10 @@ $("#BTN_deleteFile").on("click", function(event) {
 			};
 			
 			$(this).closest("div").remove();
+			
+			console.log(dataTransfer.files);
+			
+			$("#files")[0].files = dataTransfer.files;
 		};
 	});
 });	
@@ -377,6 +377,8 @@ function addFile(name, size, uflSeq)
 	html.push("</div>");
 	
 	$("#attachedFiles").append(html.join(""));
+	
+	$("#FORM_write .ui.checkbox").checkbox();
 };
 
 function isReply()
